--- a/app/views/abouts/new.html.erb
+++ b/app/views/abouts/new.html.erb
@@ -1,5 +1,5 @@
 <h1>User Details</h1>
-<%= form_for :post, url: "/abouts" do |i| %>
+<%= form_with method: :post, url: "/abouts" do |i| %>
 
   <p>
     <%= i.label :FirstName %>
@@ -14,5 +14,7 @@
   <p>
     <%= i.submit %>
   </p>
+
+  
 
 <% end %>
