--- a/app/views/abouts/new.html.erb
+++ b/app/views/abouts/new.html.erb
@@ -1,5 +1,5 @@
 <h1>User Details</h1>
-<%= form_with method: :post, url: "/abouts" do |i| %>
+<%= form_with method: "post", url: "/abouts" do |i| %>
 
   <p>
     <%= i.label :FirstName %>
