--- a/app/views/user_details/new.html.erb
+++ b/app/views/user_details/new.html.erb
@@ -1,96 +1,2 @@
 <h1 class="text-center">Fill User Details</h1>
-
-<%= form_with model: @user, url: user_details_new_path do |form| %>
-  <%= form.label :user, 'User :' %>
-  <%= form.radio_button :user_type, 'admin' %>
-  <%= form.label :user_type_admin, 'Admin' %>
-  <%= form.radio_button :user_type, 'customer' %>
-  <%= form.label :user_type_customer, 'Customer' %><br>
-
-  <%= form.label :first_name, 'First Name' %><br>
-  <%= form.text_field :first_name , class:'input'%><br>
-  <%= form.label :last_name, 'Last Name' %><br>
-  <%= form.text_field :last_name, class:'input'%><br>
-  <%= form.label :phone, 'Phone Number' %><br>
-  <%= form.telephone_field :phone, class:'input'%>  <br>
-  <%= form.label :alter_phone, 'Alter Phone' %><br>
-  <%= form.telephone_field :alter_phone , class:'input'%><br>
-  <%= form.label :address, 'Address' %><br>
-  <%= form.text_field :address , class:'input'%><br>
-  <%= form.label :email, 'email' %><br>
-  <%= form.email_field :email, class:'input' %><br>
-  <%= form.label :alter_email, 'Alternate email' %><br>
-  <%= form.email_field :alter_email, class:'input' %><br>
-  <%= form.label :aadhar_no, 'Aadhar Number ' %><br>
-  <%= form.text_field :aadhar_no, class:'input'%><br>  
-  <%= form.label :pan_no, 'Pan Number' %><br>
-  <%= form.text_field :pan_no, class:'input'%><br>
-  <%= form.label :bio, 'About Yourself' %><br>
-  <%= form.text_area :bio %><br> 
-  <%= form.label :password, 'Password' %><br>
-  <%= form.password_field :password , class:'input'%><br>
-
-  <button id="submit-btn">Submit</button>
-
-<% end %>
-
-<script>
-
-  var regName = /^[A-Za-z]{3,}$/
-  var regEmail = /^\w[\w+.\-_]+@[A-z]+\.[A-z]+$/
-  var regPhone = /^[0-9]{10}$/
-  var regAddress = /^[\w+\d+\s..,-]{20,}$/
-  var regPassword = /^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{6,}$/
-  var regPan = /^[A-Z]{5}[0-9]{4}[A-Z]{1}$/ 
-  var regAadhar = /^[0-9]{12}$/
-
-
-  var inputArray = document.querySelectorAll(".input");
-  // var confirmPassword = document.getElementById("cpassword");
-  console.log(inputArray);
-  // console.log(confirmPassword.value);
-
-
-
-  var regArray = new Array(regName, regName, regPhone, regPhone, regAddress, regEmail, regEmail, regAadhar, regPan, regPassword );
-  var alertArray = ["name must be greater than 3 characters ", "name must be greater than 3 characters", "enter valid phone number", "enter valid alter phone number", "enter valid Address","enter valid email address", "enter alter email address", "enter valid aadhar number", "enter valid Pan number", "password must be greater than 8 character, conatin one special symbol and one number and one capital letter" ];
-  var valueArray = [];
-  var array = [];
-
-
-  var submit = document.querySelector("#submit-btn");
-  submit.addEventListener("click", check);
-
-  function check() {
-    document.querySelectorAll(".input").forEach( item => {array.push(item.value)});
-    console.log(array)
-
-    for (var i = 0; i < inputArray.length; i++) {
-      // valueArray.push(inputArray[i].value);
-      // console.log(valueArray);
-      
-
-      if ( !regArray[i].test(array[i]) &&  array[i] != "") {
-
-        alert(alertArray[i]);
-        array.length = 0;
-        console.log(array[i]);
-        console.log(alertArray[i]);
-        break;
-      }
-          
-      else if (array[i] == "") {
-        alert(alertArray[i]);
-        array.length = 0;
-        console.log(array);
-        break;
-      }
-
-    }
-      console.log('validation checked')
-    // if (array[5] != array[4] && array[5] != "" &&array[4] != "") {
-    //   alert("password must be same");
-    // }
-  }
-</script>
-
+<%= render "form" %>
