--- a/app/views/user_details/index.html.erb
+++ b/app/views/user_details/index.html.erb
@@ -2,17 +2,18 @@
 <table>
   <tr>
     <th class="border-2">ID</th>
-    <th class="border-2">User</th>
-    <th class="border-2">First Name</th>
-    <th class="border-2">Last Name</th>
-    <th class="border-2">Bio</th>
-    <th class="border-2">Address</th>
-    <th class="border-2">Email</th>
-    <th class="border-2">Alter Email</th>
+    <th class="border-2">Full Name</th>
     <th class="border-2">Phone</th>
     <th class="border-2">Alter Phone</th>
+    <th class="border-2">Email</th>
+    <th class="border-2">Alter Email</th>
+    <th class="border-2">Address</th>
+    <th class="border-2">User</th>
     <th class="border-2">Aadhar Number</th>
     <th class="border-2">Pan Number</th>
+    <th class="border-2">Bio</th>
+    <th class="border-2">Password</th>
+    <th class="border-2">Created Date</th>
     <th class="border-2" colspan="3"></th>
 
     <th></th>
@@ -21,17 +22,18 @@
   <% @users.each do |user| %>
     <tr>
       <td class="border-1"><%=user.id %></td>
-      <td class="border-1"><%=user.user_type %></td>
-      <td class="border-1"><%=user.first_name %></td>
-      <td class="border-1"><%=user.last_name %></td>
-      <td class="border-1"><%=user.bio %></td>
-      <td class="border-1"><%=user.address %></td>
+      <td class="border-1"><%=full_name(user) %></td>
+      <td class="border-1"><%= phone_pattern(user) %></td>
+      <td class="border-1"><%= alter_phone_pattern(user) %></td>
       <td class="border-1"><%=user.email %></td>
       <td class="border-1"><%=user.alter_email %></td>
-      <td class="border-1"><%=user.phone %></td>
-      <td class="border-1"><%=user.alter_phone %></td>
-      <td class="border-1"><%=user.aadhar_no %></td>
+      <td class="border-1"><%=user.address %></td>
+      <td class="border-1"><%=user.user_type %></td>
+      <td class="border-1"><%= aadhar_pattern(user) %></td>
       <td class="border-1"><%=user.pan_no %></td>
+      <td class="border-1"><%=user.bio %></td>
+      <td class="border-1"><%=user.password %></td>
+      <td class="border-1"><%= date_pattern(user) %></td>
       <td class="border-1"><%=button_to "Show", user_detail_path(user), method: :get %></td>
       <td class="border-1"><%=button_to "Edit", edit_user_detail_path(user), method: :get %></td>
       <td class="border-1"><%=button_to "Delete", user_detail_path(user), method: :delete  %></td>
